--- a/apps/informes/templates/components/sidebar.html
+++ b/apps/informes/templates/components/sidebar.html
@@ -1,4 +1,3 @@
- {% block sidebar %}
  <div id="layoutSidenav_nav">
      <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
          <div class="sb-sidenav-menu">
@@ -74,9 +73,7 @@
          </div>
          <div class="sb-sidenav-footer">
              <div class="small">Logged in as:</div>
-             Start Bootstrap
+             {{ user.username|title }}
          </div>
      </nav>
  </div>
-
- {% endblock sidebar %}
